--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "meal-engine",
   "version": "1.0.0",
   "description": "first meal project",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.16.2"
+  "main": "app.js",
+  "dependencies":{
+    "express":"*",
+    "body-parser":"*"
   },
   "devDependencies": {},
   "scripts": {
@@ -14,6 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/c0mputer-junkie/meal-engine.git"
   },
+
   "author": "lian, stephanie, ashley",
   "license": "ISC",
   "bugs": {
